--- a/SERA.tab/Design.panel/Family Placement.pulldown/3 Point Family.pushbutton/bundle.yaml
+++ b/SERA.tab/Design.panel/Family Placement.pulldown/3 Point Family.pushbutton/bundle.yaml
@@ -1,5 +1,5 @@
 tooltip: >-
-  Tessellate a selected surface with a 3-point adaptive family. Pete was here.
+  Tessellate a selected surface with a 3-point adaptive family. 
 
 
   Specify a number of U and V divisions as well as minimum and maximum offsets.
