--- a/SERA.tab/System.panel/Reload.pushbutton/bundle.yaml
+++ b/SERA.tab/System.panel/Reload.pushbutton/bundle.yaml
@@ -1,4 +1,4 @@
-tooltip: Searches the script folders and create buttons for the new script or newly installed extensions
+tooltip: Update the SERA tab to reflect the latest modifications.
 engine:
   clean: true
 title:
