--- a/SERA.tab/System.panel/Packages.pushbutton/bundle.yaml
+++ b/SERA.tab/System.panel/Packages.pushbutton/bundle.yaml
@@ -2,5 +2,5 @@ tooltip: Download the latest Dynamo dependencies for SERA scripts.
 engine:
   clean: true
 title:
-  en_us: 'Reload'
+  en_us: 'Packages'
 context: zero-doc
