--- a/SERA.tab/Tools.panel/Keynotes.pushbutton/bundle.yaml
+++ b/SERA.tab/Tools.panel/Keynotes.pushbutton/bundle.yaml
@@ -4,7 +4,8 @@ tooltip:
     Manage project keynotes.
 
 
-    Shift+Click: Reset window configurations and open.
+    Shift+Click
+    Reset window configurations and open.
 title:
     Manage
 
