--- a/SERA.tab/Tools.panel/Keynotes.pushbutton/bundle.yaml
+++ b/SERA.tab/Tools.panel/Keynotes.pushbutton/bundle.yaml
@@ -1,12 +1,12 @@
 help_url: >-
   https://www.notion.so/pyrevitlabs/Manage-Keynotes-6f083d6f66fe43d68dc5d5407c8e19da
 tooltip:
-    Manage project keynotes.
+  Manage project keynotes.
 
 
-    Shift+Click: Reset window configurations and open.
+  Shift+Click
+  Reset window configurations and open.
 title:
-  en_us: |-
-    Manage
-    Keynotes
-min_revit_version: 2014
+  Manage
+
+  Keynotes
