--- a/SERA.tab/Tools.panel/Keynotes.pushbutton/bundle.yaml
+++ b/SERA.tab/Tools.panel/Keynotes.pushbutton/bundle.yaml
@@ -4,8 +4,7 @@ tooltip:
   Manage project keynotes.
 
 
-  Shift+Click
-  Reset window configurations and open.
+  Shift+Click to reset window configurations and open.
 title:
   Manage
 
