--- a/SERA.tab/Health.panel/Model Health.urlbutton/bundle.yaml
+++ b/SERA.tab/Health.panel/Model Health.urlbutton/bundle.yaml
@@ -3,5 +3,5 @@ title:
   
   Health
 tooltip: Link to Model Health Dashboard
-hyperlink: "https://app.powerbi.com/groups/dad0d9fe-5fe0-48d5-84de-1e5911756ecf/reports/4e2cb792-902f-4c35-aeba-80e59b831c0a/ReportSection"
+hyperlink: "file://local.serapdx.com/Data/Resources/SERA BIM/Model Health Reports/"
 context: zero-doc
